# ostep-homework-solutions

./: CMakeLists.txt
cpu-api/solutions/code/: ex1.c  ex2.c  ex3.c  ex4.c  ex7.c  ex8.c
cpu-mechanisms-measurement/: ContextSwitchMeasurement.c  SysCallMeasurement.c
cpu-sched/: sol.txt
cpu-sched-mlfq/: sol.txt
file-implementation/: solutions.txt
file-intro/solutions/code/: find.c  list-files.c  my-stat.c  tail.c
file-raid/: sol.txt
threads-api/: main-race.c
threads-events/solutions/code/: client.c  client.cpp  common.c  common.cpp  common.h  err.h  server.c  server.cpp
threads-locks-usage/: ApproxConcurrentCounter.c  BasicConcurrentCounter.c  BasicConcurrentList.c  HandOverHandList.c  aprox-concurrent-counter.txt  basic-concurrent-counter.txt  basic-concurrent-list.txt  runner.sh
threads-sema/: CMakeLists.txt  barrier.c  fork-join.c  mutex-nostarve.c  reader-writer-nostarve-modern.c  reader-writer-nostarve.c  rendezvous.c
vm-api/solutions/code/: ex4.c  ex5.c  ex6.c  ex7.c  null.c  vector.c  vector.h
vm-beyondphys-policy/: genTrace.py  sol.txt
vm-freespace/: sol.txt
vm-intro/solutions/code/: memory-user.c
vm-paging/: sol.txt
vm-smalltables/: listHexFromPage.py  sol.txt
vm-tlbs/code/: output.txt  tlb.c  tlbs.sh
