cmake_minimum_required(VERSION 3.27)

project(ostep-homework-solutions)

set(CMAKE_C_STANDARD 23)

add_executable(cpu-api_ex1 cpu-api/solutions/code/ex1.c)
add_executable(cpu-api_ex2 cpu-api/solutions/code/ex2.c)
add_executable(cpu-api_ex3 cpu-api/solutions/code/ex3.c)
add_executable(cpu-api_ex4 cpu-api/solutions/code/ex4.c)
add_executable(cpu-api_ex7 cpu-api/solutions/code/ex7.c)
add_executable(cpu-api_ex8 cpu-api/solutions/code/ex8.c)
add_executable(SysCallMeasurement cpu-mechanisms-measurement/SysCallMeasurement.c)
